--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run lint && npm run format && tsc -b && vite build",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "format": "prettier --check .",
+    "format": "prettier --write . --ignore-path .prettierignore",
     "format:fix": "prettier --write .",
     "preview": "vite preview",
     "prepare": "husky"
