--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "prettier": "^2.8.8",
+    "sass-embedded": "^1.87.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
