--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "npm run lint && npm run format && tsc -b && vite build",
     "lint": "eslint . --ext .ts,.tsx",
@@ -37,7 +38,6 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "prettier": "^2.8.8",
-    "sass-embedded": "^1.87.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
