--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0-rc.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
